[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "provider-variant-aarch64"
authors = [{name = "Michał Górny", email = "mgorny@quansight.com"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version", "description"]
dependencies = [
    "archspec",
    "variantlib",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-mock",
]

[project.urls]
Home = "https://github.com/wheelnext/provider-variant-aarch64/"

[project.entry-points.variant_plugins]
provider_variant_aarch64 = "provider_variant_aarch64.plugin:AArch64Plugin"
